# mediadata

./: .gitignore  METADATA.json  PLAN.md  README.md  USAGE.md  __init__.py  cli.py  coverage.json  demo.py  mediadata  mediadata.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
assets/: boxofficemurders_2507_librivox_archive.torrent
config/: config.py
mediadata/: __init__.py  metadata.py  organize.py  scan.py  utils.py
mediadata/config/: __init__.py
src/: __init__.py  cli.py  mediadata.py  metadata.py  organize.py  scan.py
src/config/: config.py
tests/: __init__.py  test_audiobook_structure.py  test_mediadata.py  test_metadata.py  test_organize.py  test_scan.py  test_tmdb_examples.py  test_utils.py
